# GPULightmassKernel

./: .gitignore  CMakeLists.txt  README.MD  build_linux.sh
GPULightmassKernel/: GPULightmassKernel.cpp  GPULightmassKernel.h  GPULightmassKernel.vcxproj  ProgressReport.cpp  Radiosity.cpp  StringUtils.cpp
GPULightmassKernel/BVH/: EmbreeBVHBuilder.cpp
GPULightmassKernel/rt/: rtDebugFunc.h  rtRayBufferKernel.h  rtTraceCWBVHDynamicFetch.h  rtTraceCWBVHFunc.h  rtTraceFunc.h
ProgressReporter/: MainForm.Designer.cs  MainForm.cs
embree_static/lib/: lexers.lib  math.lib  simd.lib  sys.lib  tasking.lib
embree_static/lib/cmake/embree-4.4.0/: embree-config.cmake  embree-targets-release.cmake  embree-targets.cmake  embree_avx-targets-release.cmake  embree_avx-targets.cmake  embree_avx2-targets-release.cmake  embree_avx2-targets.cmake  embree_sse42-targets-release.cmake  embree_sse42-targets.cmake  lexers-targets-release.cmake  lexers-targets.cmake  math-targets-release.cmake  math-targets.cmake  simd-targets-release.cmake  simd-targets.cmake  sys-targets-release.cmake  sys-targets.cmake  tasking-targets-release.cmake  tasking-targets.cmake
tbb2019_20190605oss/cmake/: TBBConfig.cmake
tbb2019_20190605oss/lib/ia32/vc12/: tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
tbb2019_20190605oss/lib/ia32/vc12_ui/: tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
tbb2019_20190605oss/lib/ia32/vc14/: tbb.def  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
tbb2019_20190605oss/lib/ia32/vc14_uwp/: tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
tbb2019_20190605oss/lib/intel64/vc12/: tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
tbb2019_20190605oss/lib/intel64/vc12_ui/: tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
tbb2019_20190605oss/lib/intel64/vc14/: tbb.def  tbb_preview.lib  tbb_preview_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
tbb2019_20190605oss/lib/intel64/vc14_uwp/: tbb.def  tbb.lib  tbb_debug.lib  tbb_preview.lib  tbb_preview_debug.lib  tbbmalloc.lib  tbbmalloc_debug.lib  tbbmalloc_proxy.lib  tbbmalloc_proxy_debug.lib  tbbproxy.lib  tbbproxy_debug.lib
